--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,8 @@
 <mat-menu #appMenu="matMenu">
   <a mat-menu-item [routerLink]="['home']">Home</a>
   <a mat-menu-item [routerLink]="['vendors']">Vendors</a>
+  <a mat-menu-item [routerLink]="['products']">Products</a>
+  <a mat-menu-item [routerLink]="['generator']">generator</a>
+
 </mat-menu>
 <router-outlet></router-outlet>
