--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,16 @@
 <mat-toolbar color="primary">
-  <span>INFO5059</span>
-  <span style="flex: 1 1 auto;"></span>
-  <button mat-button [matMenuTriggerFor]="appMenu" align="end">
+    <span>INFO5059</span>
+    <span style="flex: 1 1 auto;"></span>
+    <button mat-button [matMenuTriggerFor]="appMenu" align="end">
     <mat-icon>menu</mat-icon>
   </button>
 </mat-toolbar>
 <mat-menu #appMenu="matMenu">
-  <a mat-menu-item [routerLink]="['home']">Home</a>
-  <a mat-menu-item [routerLink]="['vendors']">Vendors</a>
-  <a mat-menu-item [routerLink]="['products']">Products</a>
-  <a mat-menu-item [routerLink]="['generator']">generator</a>
+    <a mat-menu-item [routerLink]="['home']">Home</a>
+    <a mat-menu-item [routerLink]="['vendors']">Vendors</a>
+    <a mat-menu-item [routerLink]="['products']">Products</a>
+    <a mat-menu-item [routerLink]="['generator']">generator</a>
+    <a mat-menu-item [routerLink]="['viewer']">viewer</a>
 
 </mat-menu>
 <router-outlet></router-outlet>
